runtime/basis-ffi.h

PRIVATE C_Size_t Date_strfTime(Array(Char8_t),C_Size_t,NullString8_t);
PRIVATE C_Size_t MinGW_getTempPath(C_Size_t,Array(Char8_t));
PRIVATE C_Errno_t(C_PId_t) MLton_Process_spawne(NullString8_t,Array(NullString8_t),Array(NullString8_t));
PRIVATE C_Errno_t(C_PId_t) MLton_Process_spawnp(NullString8_t,Array(NullString8_t));
PRIVATE void NetHostDB_getEntryAddrsN(C_Int_t,Array(Word8_t));
PRIVATE C_Errno_t(C_Int_t) NetHostDB_getHostName(Array(Char8_t),C_Size_t);
PRIVATE C_Errno_t(C_String_t) Posix_FileSys_getcwd(Array(Char8_t),C_Size_t);
PRIVATE C_Errno_t(C_SSize_t) Posix_FileSys_readlink(NullString8_t,Array(Char8_t),C_Size_t);
PRIVATE C_Errno_t(C_Int_t) Posix_IO_pipe(Array(C_Fd_t));
PRIVATE C_Errno_t(C_SSize_t) Posix_IO_readChar8(C_Fd_t,Array(Char8_t),C_Int_t,C_Size_t);
PRIVATE C_Errno_t(C_SSize_t) Posix_IO_readWord8(C_Fd_t,Array(Word8_t),C_Int_t,C_Size_t);
PRIVATE C_Errno_t(C_SSize_t) Posix_IO_writeChar8Arr(C_Fd_t,Array(Char8_t),C_Int_t,C_Size_t);
PRIVATE C_Errno_t(C_SSize_t) Posix_IO_writeWord8Arr(C_Fd_t,Array(Word8_t),C_Int_t,C_Size_t);
PRIVATE C_Errno_t(C_Int_t) Posix_ProcEnv_getgroups(C_Int_t,Array(C_GId_t));
PRIVATE C_Errno_t(C_Int_t) Posix_Process_exece(NullString8_t,Array(NullString8_t),Array(NullString8_t));
PRIVATE C_Errno_t(C_Int_t) Posix_Process_execp(NullString8_t,Array(NullString8_t));
PRIVATE void Posix_TTY_Termios_getCC(Array(C_CC_t));
PRIVATE void Posix_TTY_Termios_setCC(Array(C_CC_t));
MLTON_CODEGEN_STATIC_INLINE Simd128_Real32_t Simd128_Real32_load(Array(Real32_t));
MLTON_CODEGEN_STATIC_INLINE Simd128_Real32_t Simd128_Real32_loadr(Array(Real32_t));
MLTON_CODEGEN_STATIC_INLINE Simd128_Real32_t Simd128_Real32_loadu(Array(Real32_t));
MLTON_CODEGEN_STATIC_INLINE void Simd128_Real32_store(Array(Real32_t),Simd128_Real32_t);
MLTON_CODEGEN_STATIC_INLINE void Simd128_Real32_storer(Array(Real32_t),Simd128_Real32_t);
MLTON_CODEGEN_STATIC_INLINE void Simd128_Real32_storeu(Array(Real32_t),Simd128_Real32_t);
MLTON_CODEGEN_STATIC_INLINE Simd128_Real64_t Simd128_Real64_load(Array(Real64_t));
MLTON_CODEGEN_STATIC_INLINE Simd128_Real64_t Simd128_Real64_loadr(Array(Real64_t));
MLTON_CODEGEN_STATIC_INLINE Simd128_Real64_t Simd128_Real64_loadu(Array(Real64_t));
MLTON_CODEGEN_STATIC_INLINE void Simd128_Real64_store(Array(Real64_t),Simd128_Real64_t);
MLTON_CODEGEN_STATIC_INLINE void Simd128_Real64_storer(Array(Real64_t),Simd128_Real64_t);
MLTON_CODEGEN_STATIC_INLINE void Simd128_Real64_storeu(Array(Real64_t),Simd128_Real64_t);
PRIVATE C_Errno_t(C_Int_t) Socket_accept(C_Sock_t,Array(Word8_t),Ref(C_Socklen_t));
PRIVATE C_Errno_t(C_Int_t) Socket_Ctl_getPeerName(C_Sock_t,Array(Word8_t),Ref(C_Socklen_t));
PRIVATE C_Errno_t(C_Int_t) Socket_Ctl_getSockName(C_Sock_t,Array(Word8_t),Ref(C_Socklen_t));
PRIVATE C_Errno_t(C_Int_t) Socket_GenericSock_socketPair(C_Int_t,C_Int_t,C_Int_t,Array(C_Int_t));
PRIVATE void Socket_INetSock_getInAddr(Array(Word8_t));
PRIVATE void Socket_INetSock_toAddr(Vector(Word8_t),Word16_t,Array(Word8_t),Ref(C_Socklen_t));
PRIVATE C_Errno_t(C_SSize_t) Socket_recv(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t);
PRIVATE C_Errno_t(C_SSize_t) Socket_recvFrom(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t,Array(Word8_t),Ref(C_Socklen_t));
PRIVATE C_Errno_t(C_SSize_t) Socket_sendArr(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t);
PRIVATE C_Errno_t(C_SSize_t) Socket_sendArrTo(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t,Vector(Word8_t),C_Socklen_t);
PRIVATE void Socket_UnixSock_fromAddr(Vector(Word8_t),Array(Char8_t),C_Size_t);
PRIVATE void Socket_UnixSock_toAddr(NullString8_t,C_Size_t,Array(Word8_t),Ref(C_Socklen_t));